[gd_scene load_steps=13 format=3 uid="uid://dmb4x4nb1cp5w"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_nogg0"]
[ext_resource type="PackedScene" uid="uid://l2t5ihlmdluq" path="res://scenes/jump_pad.tscn" id="2_oxhhj"]
[ext_resource type="PackedScene" uid="uid://v22lw8iv8uuy" path="res://scenes/level_2.tscn" id="2_rllc5"]
[ext_resource type="PackedScene" uid="uid://dqkg4buqgni5t" path="res://scenes/death_zone.tscn" id="3_bdftd"]
[ext_resource type="PackedScene" uid="uid://bsl385krcsaiq" path="res://scenes/ui_layer.tscn" id="3_pug3l"]
[ext_resource type="PackedScene" uid="uid://dlusr0nthdayb" path="res://scenes/player.tscn" id="3_r4j0j"]
[ext_resource type="PackedScene" uid="uid://cr4kc0uv807f7" path="res://scenes/saw.tscn" id="6_buhhb"]
[ext_resource type="PackedScene" uid="uid://8jkno3siqjoi" path="res://scenes/spiked_ball.tscn" id="6_d178e"]
[ext_resource type="PackedScene" uid="uid://xruqmv8hnxxg" path="res://scenes/tile_map.tscn" id="7_ob0q0"]
[ext_resource type="PackedScene" uid="uid://bcar1p50etny6" path="res://scenes/bg.tscn" id="8_8878w"]
[ext_resource type="PackedScene" uid="uid://wih7bpgxt4gb" path="res://scenes/start.tscn" id="9_335w2"]
[ext_resource type="PackedScene" uid="uid://uj6xkklvqk8p" path="res://scenes/exit.tscn" id="10_gig5y"]

[node name="Level" type="Node2D"]
script = ExtResource("1_nogg0")
next_level = ExtResource("2_rllc5")
time_left = 50

[node name="UILayer" parent="." instance=ExtResource("3_pug3l")]

[node name="Player" parent="." instance=ExtResource("3_r4j0j")]
position = Vector2(-56, 139)
collision_mask = 29

[node name="DeathZone" parent="." instance=ExtResource("3_bdftd")]
position = Vector2(-6, 56)

[node name="Traps" type="Node2D" parent="."]

[node name="Saw2" parent="Traps" instance=ExtResource("6_buhhb")]
position = Vector2(300, 168)

[node name="SpikedBall" parent="Traps" instance=ExtResource("6_d178e")]
position = Vector2(77, 176)

[node name="Saw" parent="Traps" instance=ExtResource("6_buhhb")]
position = Vector2(204, 169)

[node name="Objects" type="Node2D" parent="."]

[node name="JumpPad" parent="Objects" instance=ExtResource("2_oxhhj")]
position = Vector2(125, 176)
collision_mask = 2

[node name="JumpPad2" parent="Objects" instance=ExtResource("2_oxhhj")]
position = Vector2(154, 176)
collision_mask = 2

[node name="TileMapLayer" parent="." instance=ExtResource("7_ob0q0")]
position = Vector2(-85, -33)

[node name="BG" parent="." instance=ExtResource("8_8878w")]

[node name="Start" parent="." instance=ExtResource("9_335w2")]
position = Vector2(-63, 193)

[node name="Exit" parent="." instance=ExtResource("10_gig5y")]
position = Vector2(33, 159)

[connection signal="body_entered" from="DeathZone" to="." method="_on_death_zone_body_entered"]
[connection signal="body_entered" from="Exit" to="." method="_on_exit_body_entered"]
